# cpp-system-monitor

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
images/dependency diagram/: diagram.drawio
include/: format.h  linux_parser.h  ncurses_display.h  process.h  processor.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
test/: format_test.cpp  linux_parser_test.cpp  process_test.cpp  processor_test.cpp  system_test.cpp  test.cpp  test_main.cpp
yocto/: .gitignore
yocto/bitbake/lib/bb/pysh/: pyshtables.py
yocto/meta-poky/recipes-app/system-monitor/: system-monitor.bb
